--- a/app/src/main/res/layout/add_comment_layout.xml
+++ b/app/src/main/res/layout/add_comment_layout.xml
@@ -3,19 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/margin_5dp"
-    android:layout_marginTop="@dimen/margin_5dp"
-    android:layout_marginEnd="@dimen/margin_5dp"
-    android:layout_marginBottom="@dimen/margin_5dp"
     android:orientation="vertical">
-
-
 
     <androidx.cardview.widget.CardView
         android:id="@+id/reviewed_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorDarkGrayCardBackground"
+        android:backgroundTint="@color/colorPrimaryLight"
         app:cardCornerRadius="8dp">
 
         <LinearLayout
@@ -26,7 +20,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_5dp"
+                android:layout_margin="@dimen/margin_10dp"
                 android:orientation="horizontal">
 
                 <de.hdodenhof.circleimageview.CircleImageView
@@ -34,109 +28,95 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:src="@drawable/user1"
-                    app:civ_border_color="#FFF"
+                    android:layout_gravity="center_vertical"
+                    app:civ_border_color="@color/colorPrimary"
                     app:civ_border_width="2dp" />
 
                 <androidx.cardview.widget.CardView
-                    android:layout_gravity="center_vertical|center_horizontal"
                     android:id="@+id/aux"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/colorBlank"
-                    app:cardCornerRadius="4dp"
-                    android:layout_marginStart="2dp">
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:layout_marginStart="10dp"
+                    android:backgroundTint="@color/colorPrimary"
+                    app:cardCornerRadius="8dp">
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/sub_comment"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginBottom="4dp"
-                        android:layout_marginStart="2dp"
-                        android:layout_marginEnd="2dp"
-                        android:layout_marginTop="2dp"
-                        android:backgroundTint="@color/colorDarkGrayCardBackground"
+                        android:layout_margin="1dp"
+                        android:backgroundTint="@color/colorPrimary"
                         app:cardCornerRadius="8dp">
 
-                            <RelativeLayout
-                                android:id="@+id/relative_layout"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center_vertical">
+                        <RelativeLayout
+                            android:id="@+id/relative_layout"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center_vertical">
 
-                                <ScrollView
-                                    android:id="@+id/scroll_view"
+                            <ScrollView
+                                android:id="@+id/scroll_view"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:foregroundGravity="center_vertical">
+
+                                <LinearLayout
+                                    android:id="@+id/auxlay"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:foregroundGravity="center_vertical">
+                                    android:orientation="vertical">
 
                                     <LinearLayout
-                                        android:id="@+id/auxlay"
+                                        android:id="@+id/edit_text_gif_layout"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:orientation="vertical">
 
-                                        <LinearLayout
-                                            android:id="@+id/edit_text_gif_layout"
-                                            android:layout_width="match_parent"
-                                            android:layout_height="wrap_content"
-                                            android:orientation="vertical">
+                                    </LinearLayout>
 
-                                        </LinearLayout>
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:weightSum="10"
+                                        android:orientation="horizontal">
 
                                         <EditText
-                                            android:foregroundGravity="center_vertical"
-                                            android:paddingStart="@dimen/margin_5dp"
-                                            android:gravity="center_vertical"
-                                            android:imeOptions="actionSend"
                                             android:id="@+id/comment_box"
-                                            android:singleLine="true"
-                                            android:layout_width="match_parent"
+                                            android:layout_width="0dp"
                                             android:layout_height="wrap_content"
+                                            android:layout_weight="8"
+                                            android:foregroundGravity="center_vertical"
+                                            android:gravity="center_vertical"
                                             android:hint="@string/add_comment"
-                                            />
+                                            android:imeOptions="actionSend"
+                                            android:layout_marginStart="@dimen/margin_10dp"
+                                            android:textColor="@color/colorPrimaryLight"
+                                            android:singleLine="true"
+                                            android:textColorHint="@color/colorPrimaryLight" />
+
+                                        <ImageView
+                                            android:id="@+id/send_button"
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="2"
+                                            android:layout_gravity="center_vertical"
+                                            android:src="@drawable/send" />
 
                                     </LinearLayout>
-                                </ScrollView>
 
-                                <ImageView
-                                    android:foregroundGravity="center_vertical"
-                                    android:layout_alignEnd="@+id/scroll_view"
-                                    android:id="@+id/send_button"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:src="@drawable/send_message"/>
+                                </LinearLayout>
 
-                            </RelativeLayout>
+                            </ScrollView>
+
+                        </RelativeLayout>
 
                     </androidx.cardview.widget.CardView>
+
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
-            <!--ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <me.biubiubiu.justifytext.library.JustifyTextView
-                    android:id="@+id/user_comment"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_5dp"
-                    android:layout_marginBottom="@dimen/margin_5dp"
-                    android:text="@string/Lorem_ipsum"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="12sp" />
-
-            </ScrollView-->
-
-
-
-            <!--TextView
-                android:id="@+id/user_comment"
-                android:text="Este es un comentario de prueba pagado por Adobe Acrobar features."
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="12dp"/-->
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
