--- a/app/src/main/res/layout/fragment_book_view.xml
+++ b/app/src/main/res/layout/fragment_book_view.xml
@@ -328,7 +328,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/total_rate"
-                                android:textColor="@color/primaryText" />
+                                android:textColor="@color/primaryText"
+                                android:textStyle="bold"/>
 
                         </LinearLayout>
 
