--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -3,25 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/margin_5dp"
-    android:layout_marginTop="@dimen/margin_5dp"
-    android:layout_marginEnd="@dimen/margin_5dp"
-    android:layout_marginBottom="@dimen/margin_5dp"
+    android:layout_margin="@dimen/margin_5dp"
     android:orientation="vertical">
-
-    <!--include
-        android:id="@+id/comment_item"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/add_comment_item"
-        android:layout_marginBottom="@dimen/margin_5dp"
-        android:visibility="invisible"/-->
 
     <androidx.cardview.widget.CardView
         android:id="@+id/reviewed_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorDarkGrayCardBackground"
+        android:backgroundTint="@color/colorPrimaryLight"
         app:cardCornerRadius="8dp">
 
         <LinearLayout
@@ -32,7 +21,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_5dp"
+                android:layout_margin="@dimen/margin_10dp"
                 android:orientation="horizontal">
 
                 <de.hdodenhof.circleimageview.CircleImageView
@@ -40,7 +29,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:src="@drawable/user1"
-                    app:civ_border_color="#FFF"
+                    app:civ_border_color="@color/colorPrimary"
                     app:civ_border_width="2dp" />
 
                 <TextView
@@ -49,38 +38,35 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_margin="@dimen/margin_5dp"
+                    android:layout_marginStart="@dimen/margin_15dp"
                     android:text="@string/example_text"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/primaryText"
                     android:textStyle="bold" />
 
                 <LinearLayout
-                    android:layout_gravity="center_vertical"
-                    android:gravity="end"
                     android:id="@+id/edit_delete_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/margin_5dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="end"
                     android:orientation="horizontal"
                     android:visibility="invisible">
 
                     <ImageButton
-                        android:layout_gravity="center_vertical"
                         android:id="@+id/edit_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/margin_5dp"
-                        android:backgroundTint="@color/colorDarkGrayCardBackground"
-                        android:src="@drawable/ic_edit_button"/>
+                        android:layout_gravity="center_vertical"
+                        android:backgroundTint="@color/colorPrimaryLight"
+                        android:src="@drawable/ic_edit_button" />
 
                     <ImageButton
-                        android:layout_gravity="center_vertical"
                         android:id="@+id/delete_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/margin_5dp"
-                        android:backgroundTint="@color/colorDarkGrayCardBackground"
-                        android:src="@drawable/ic_delete_button"/>
+                        android:layout_gravity="center_vertical"
+                        android:backgroundTint="@color/colorPrimaryLight"
+                        android:src="@drawable/ic_delete_button" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -90,94 +76,87 @@
                 android:layout_height="wrap_content">
 
                 <LinearLayout
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="@dimen/margin_10dp"
+                    android:layout_marginStart="@dimen/margin_15dp"
+                    android:layout_marginEnd="@dimen/margin_15dp">
 
                     <TextView
-                        android:justificationMode="inter_word"
                         android:id="@+id/user_comment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/margin_5dp"
-                        android:layout_marginBottom="@dimen/margin_5dp"
-                        android:layout_marginEnd="@dimen/margin_5dp"
+                        android:justificationMode="inter_word"
                         android:text="@string/Lorem_ipsum"
-                        android:textColor="@color/colorBlack"
+                        android:textColor="@color/primaryText"
                         android:textSize="12sp" />
 
                     <LinearLayout
                         android:id="@+id/gif_container"
-                        android:layout_marginEnd="@dimen/margin_5dp"
-                        android:layout_marginTop="@dimen/margin_5dp"
-                        android:layout_marginBottom="@dimen/margin_5dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center_horizontal">
-                    </LinearLayout>
+                        android:gravity="center_horizontal"
+                        android:orientation="horizontal"/>
 
                 </LinearLayout>
+
             </ScrollView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:orientation="horizontal"
-                android:gravity="center_horizontal">
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
 
-                <!--de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profile_image"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/user1"
-                    app:civ_border_color="#FFF"
-                    app:civ_border_width="2dp" /-->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:backgroundTint="@color/colorBlank">
+                    android:backgroundTint="@color/colorPrimaryDark"
+                    app:cardCornerRadius="8dp">
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/card_view2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:backgroundTint="@color/colorDarkGrayCardBackground"
-                        android:background="@drawable/layout_border"
-                        android:layout_marginTop="2dp"
-                        android:layout_marginBottom="2dp"
                         android:layout_marginStart="2dp"
+                        android:layout_marginTop="2dp"
                         android:layout_marginEnd="2dp"
-                        app:cardCornerRadius="2dp">
+                        android:layout_marginBottom="2dp"
+                        android:background="@drawable/layout_border"
+                        android:backgroundTint="@color/colorPrimary"
+                        app:cardCornerRadius="8dp">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="@dimen/margin_5dp"
+                            android:gravity="center_horizontal"
                             android:orientation="horizontal"
-                            android:gravity="center_horizontal">
+                            android:weightSum="7">
 
                             <LinearLayout
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:layout_marginStart="1dp"
-                                android:layout_marginEnd="1dp"
+                                android:layout_marginStart="5dp"
+                                android:layout_marginEnd="5dp"
+                                android:layout_weight="2"
                                 android:gravity="center_horizontal">
 
                                 <com.like.LikeButton
-                                    app:icon_type="heart"
-                                    app:icon_size="25dp"
                                     android:id="@+id/star_button"
                                     android:layout_width="25dp"
                                     android:layout_height="25dp"
-                                    android:layout_marginTop="1dp"
-                                    android:layout_marginBottom="1dp"
-                                    app:circle_start_color="@color/colorBlank"
+                                    android:paddingTop="3dp"
+                                    android:paddingBottom="3dp"
+                                    android:layout_gravity="center_vertical"
+                                    app:anim_scale_factor="1.5"
+                                    app:circle_start_color="@color/colorPrimaryLight"
+                                    app:icon_size="25dp"
+                                    app:icon_type="heart"
                                     app:like_drawable="@drawable/like_filled"
-                                    app:unlike_drawable="@drawable/like_unfilled"
-                                    app:anim_scale_factor="1.5"/>
+                                    app:unlike_drawable="@drawable/heart_unfilled" />
 
                                 <TextView
                                     android:id="@+id/likes_number"
@@ -187,27 +166,28 @@
                                     android:layout_gravity="center_vertical"
                                     android:layout_margin="@dimen/margin_5dp"
                                     android:text="120"
-                                    android:textColor="@color/colorBlack"
-                                    android:textStyle="bold"
-                                    android:textSize="14dp"/>
+                                    android:textColor="@color/colorPrimaryLight"
+                                    android:textSize="14sp"
+                                    android:textStyle="bold" />
 
                             </LinearLayout>
 
                             <LinearLayout
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:layout_marginStart="1dp"
-                                android:layout_marginEnd="1dp"
+                                android:layout_marginStart="5dp"
+                                android:layout_marginEnd="5dp"
+                                android:layout_weight="3"
                                 android:gravity="center_horizontal">
 
                                 <ImageView
                                     android:id="@+id/see_comments_button"
                                     android:layout_width="25dp"
                                     android:layout_height="25dp"
-                                    android:layout_marginTop="1dp"
-                                    android:layout_marginBottom="1dp"
-                                    android:src="@drawable/chat"/>
+                                    android:paddingTop="3dp"
+                                    android:paddingBottom="3dp"
+                                    android:src="@drawable/chat"
+                                    android:layout_gravity="center_vertical"/>
 
                                 <TextView
                                     android:id="@+id/likes_number1"
@@ -217,27 +197,28 @@
                                     android:layout_gravity="center_vertical"
                                     android:layout_margin="@dimen/margin_5dp"
                                     android:text="@string/see_comments"
-                                    android:textColor="@color/colorBlack"
-                                    android:textStyle="bold"
-                                    android:textSize="14dp"/>
+                                    android:textColor="@color/colorPrimaryLight"
+                                    android:textSize="14sp"
+                                    android:textStyle="bold" />
 
                             </LinearLayout>
 
                             <LinearLayout
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:layout_marginStart="1dp"
-                                android:layout_marginEnd="1dp"
+                                android:layout_marginStart="5dp"
+                                android:layout_marginEnd="5dp"
+                                android:layout_weight="2"
                                 android:gravity="center_horizontal">
 
                                 <ImageView
                                     android:id="@+id/star_button2"
                                     android:layout_width="25dp"
                                     android:layout_height="25dp"
-                                    android:layout_marginTop="1dp"
-                                    android:layout_marginBottom="1dp"
-                                    android:src="@drawable/share"/>
+                                    android:paddingTop="@dimen/margin_5dp"
+                                    android:paddingBottom="@dimen/margin_5dp"
+                                    android:src="@drawable/share"
+                                    android:layout_gravity="center_vertical"/>
 
                                 <TextView
                                     android:id="@+id/likes_number2"
@@ -247,9 +228,9 @@
                                     android:layout_gravity="center_vertical"
                                     android:layout_margin="@dimen/margin_5dp"
                                     android:text="@string/share"
-                                    android:textColor="@color/colorBlack"
-                                    android:textStyle="bold"
-                                    android:textSize="14dp"/>
+                                    android:textColor="@color/colorPrimaryLight"
+                                    android:textSize="14sp"
+                                    android:textStyle="bold" />
 
                             </LinearLayout>
 
@@ -281,20 +262,18 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginEnd="5dp"
                         android:layout_marginBottom="10dp"
-                        android:orientation="vertical"
-                        android:animateLayoutChanges="true">
-                    </LinearLayout>
+                        android:animateLayoutChanges="true"
+                        android:orientation="vertical"></LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/add_comment_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="@dimen/margin_5dp"
                         android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="10dp">
-                    </LinearLayout>
+                        android:layout_marginBottom="10dp"
+                        android:orientation="vertical"></LinearLayout>
 
                 </LinearLayout>
 
