--- a/app/src/main/res/layout/reviews_layout.xml
+++ b/app/src/main/res/layout/reviews_layout.xml
@@ -9,67 +9,35 @@
     <LinearLayout
         android:id="@+id/linear"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:background="@color/colorPrimaryDark">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="start"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/close_arrow"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/margin_10dp"
-                android:layout_marginTop="@dimen/margin_10dp"
-                android:background="@color/cardview_light_background"
-                android:contentDescription="@string/imageview_adapter_text"
-                android:src="@drawable/ic_close_arrow" />
-
-            <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/add_review_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorGrayCardBackground"
-                android:foregroundTint="@color/colorGrayCardBackground"
-                android:src="@drawable/ic_add_book" />-->
-        </LinearLayout>
+        <ImageButton
+            android:id="@+id/close_arrow"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/close"
+            android:scaleType="centerInside"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/imageview_adapter_text"
+            android:padding="18dp"/>
 
         <TextView
             android:id="@+id/info_text"
-            style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
             android:text="@string/comments"
-            android:textColor="@color/colorBlack"
             android:textSize="25sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryLight"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="20dp"/>
 
-        <!--LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/linearLayout"
-            android:gravity="end">
-
-            <ImageButton
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@drawable/roudend_image_button"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/margin_10dp"
-                android:layout_marginTop="@dimen/margin_10dp"
-                android:src="@drawable/ic_add_book"/>
-
-
-        </LinearLayout-->
     </LinearLayout>
+
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -80,33 +48,24 @@
         <ScrollView
             android:id="@+id/scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_10dp"
-            android:layout_marginTop="@dimen/margin_10dp">
+            android:layout_height="wrap_content">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/comments_recyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_height="match_parent"
+                    android:layout_margin="15dp"/>
 
                 <LinearLayout
-                    android:layout_alignBottom="@+id/comments_recyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="10dp" />
-            </RelativeLayout>
+                    android:layout_height="40dp"
+                    android:layout_margin="15dp"/>
+            </LinearLayout>
 
         </ScrollView>
 
@@ -117,117 +76,12 @@
             android:src="@drawable/chat"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/margin_5dp"
-            android:layout_marginBottom="@dimen/margin_10dp"
-            android:background="@color/colorBlank"
-            android:backgroundTint="@color/colorBlank"
-            app:rippleColor="@color/colorBlack"
+            android:layout_marginEnd="@dimen/margin_15dp"
+            android:layout_marginBottom="@dimen/margin_15dp"
+            android:background="@color/colorPrimaryLight"
+            android:backgroundTint="@color/colorPrimaryLight"
+            app:rippleColor="@color/icons"
             app:borderWidth="0dp"/>
-        
-
     </RelativeLayout>
-
-
-    <!--LinearLayout
-        android:id="@+id/comment_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="@dimen/margin_5dp"
-        android:layout_marginTop="@dimen/margin_5dp"
-        android:layout_marginEnd="@dimen/margin_5dp"
-        android:layout_marginBottom="@dimen/margin_5dp"
-        android:orientation="vertical">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorBlack"
-            app:cardCornerRadius="5dp">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:backgroundTint="@color/colorDarkGrayCardBackground"
-                app:cardCornerRadius="4dp"
-                app:cardElevation="20dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/margin_5dp"
-                        android:orientation="horizontal">
-
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/profile_image"
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/user1"
-                            app:civ_border_color="#FFF"
-                            app:civ_border_width="2dp" />
-
-                        <TextView
-                            android:id="@+id/user_name"
-                            style="@style/TextAppearance.AppCompat.Title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_margin="@dimen/margin_5dp"
-                            android:textColor="@color/colorBlack"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                    <ScrollView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-
-
-                            <EditText
-                                android:id="@+id/edit_text"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginEnd="25dp"
-                                android:gravity="center_horizontal"
-                                android:hint="Añade un comentario"
-                                android:imeOptions="actionSend"
-                                android:inputType="text" />
-
-                            <ImageButton
-                                android:id="@+id/send_comment"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:layout_alignEnd="@+id/edit_text"
-                                android:layout_alignParentEnd="true"
-                                android:layout_alignParentBottom="true"
-                                android:layout_marginStart="@dimen/margin_5dp"
-                                android:layout_marginEnd="@dimen/margin_5dp"
-                                android:layout_marginBottom="@dimen/margin_5dp"
-                                android:background="@color/colorDarkGrayCardBackground"
-                                android:src="@drawable/send_arrow_icon" />
-
-                        </RelativeLayout>
-
-                    </ScrollView>
-
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout-->
 
 </RelativeLayout>
