--- a/app/src/main/res/layout/shop_list_item.xml
+++ b/app/src/main/res/layout/shop_list_item.xml
@@ -5,22 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:layout_margin="5dp"
-    card_view:cardCornerRadius="8dp"
+    card_view:cardCornerRadius="4dp"
     card_view:cardElevation="8dp">
 
     <LinearLayout
         android:id="@+id/linearLayoutCardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:background="@color/colorGrayCardBackground">
+        android:background="@color/colorPrimaryDark"
+        android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/shop_logo"
-            android:layout_width="120dp"
+            android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/profile_photo"/>
+            android:src="@drawable/profile_photo"
+            android:layout_marginStart="@dimen/margin_15dp"
+            android:layout_marginEnd="@dimen/margin_15dp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -34,10 +36,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
+                android:text="10.59"
+                android:textColor="@color/colorPrimaryLight"
                 android:textSize="22sp"
-                android:textStyle="bold"
-                android:textColor="@color/colorBlack"
-                android:text="10.59"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/currency"
@@ -45,16 +47,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
+                android:text="@string/euro_currency"
+                android:textColor="@color/colorPrimaryLight"
                 android:textSize="22sp"
-                android:textStyle="bold"
-                android:textColor="@color/colorBlack"
-                android:text="@string/euro_currency"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/margin_10dp"
             android:orientation="horizontal">
 
             <RelativeLayout
@@ -63,8 +66,8 @@
 
                 <ImageView
                     android:id="@+id/go_shop_button"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
                     android:layout_alignParentRight="true"
                     android:src="@drawable/ic_go_shop_button" />
 
