--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="margin_10dp">10dp</dimen>
     <dimen name="margin_15dp">15dp</dimen>
     <dimen name="card_corner_radius">4dp</dimen>
+    <dimen name="card_corner_radius_big">8dp</dimen>
     <dimen name="card_height">200dp</dimen>
     <dimen name="blank_layout">70dp</dimen>
     <dimen name="emoji_size">75dp</dimen>
